--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">Data-Driven Order Assignment for Last Mile Delivery</a>.&rdquo; (with Sheng Liu and Z. Max Shen).</p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>.&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
 
 <li><p>&ldquo;<a href="http://ssrn.com/abstract=2915470" target="_blank">Spatial Pricing and Product Allocation in Online Retailing</a>.&rdquo; (with T. Tony Ke).</p></li>
 
