--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
 <p>[M&amp;SOM Blog: <a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">Start Your Engine: Data-driven Planning for Car Sharing Systems for Smart Cities</a>.]</p></li>
 
-<li><p>&ldquo;Stochastic Control for Smart Grid Users with Flexible Demand.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
+<li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
 </ul>
 
 <h2 id="working-papers">Working Papers</h2>
