--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management</em>. 2019.</p></li>
 
-<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017.</p>
+<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017. [Winner of <em>M&amp;SOM Best Paper Award</em>, 2019]</p>
 
 <p>[M&amp;SOM Blog: <a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">Start Your Engine: Data-driven Planning for Car Sharing Systems for Smart Cities</a>.]</p></li>
 
@@ -471,7 +471,7 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang).</p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">Data-Driven Order Assignment for Last Mile Delivery</a>.&rdquo; (with Sheng Liu and Z. Max Shen).</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). [Previous title: &ldquo;Data-Driven Order Assignment for Last Mile Delivery&rdquo;]</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>.&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
 
