--- a/index.html
+++ b/index.html
@@ -453,13 +453,19 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ul>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. Forthcoming.</p></li>
+
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management</em>. 2019.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management</em>. 2019.</p></li>
 
-<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017. [Winner of <em>M&amp;SOM Best Paper Award</em>, 2019]</p>
+<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
 
-<p>[M&amp;SOM Blog: <a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">Start Your Engine: Data-driven Planning for Car Sharing Systems for Smart Cities</a>.]</p></li>
+<blockquote>
+<ul>
+<li>Winner of <em>M&amp;SOM Best Paper Award</em>, 2019</li>
+</ul>
+</blockquote></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
 </ul>
@@ -468,8 +474,6 @@
 
 <ul>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3307337" target="_blank">Robust Vehicle Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang).</p></li>
-
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang).</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). [Previous title: &ldquo;Data-Driven Order Assignment for Last Mile Delivery&rdquo;]</p></li>
 
