--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
 <li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
 
 <ul>
-<li>Winner of <em>M&amp;SOM Best Paper Award</em>, 2019</li>
+<li>M&amp;SOM Best Paper Award, INFORMS, 2019</li>
+<li>TSL Best Paper Award, INFORMS, 2019</li>
 </ul></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
