--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an assistant professor in Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. Prior to joining NUS, I was a data scientist at @WalmartLabs, Walmart eCommerce in California. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology.</p>
+<p>I am an assistant professor in Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. Prior to joining NUS, I was a data scientist at @WalmartLabs, Walmart eCommerce in California. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management.</p>
+
+<p><a href="https://bizfaculty.nus.edu.sg/faculty-details/?profId=470" target="_blank">My official NUS Webpage</a></p>
 
 
     <div class="row">
@@ -453,17 +455,19 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. Forthcoming.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em>. Forthcoming.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management</em>. 2019.</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging an Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. Forthcoming.</p></li>
+
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management</em> 29(1), 9-23, 2020.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management</em>. 2019.</p></li>
 
-<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), pp. 309–327, 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
+<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), 309–327, 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
 
 <ul>
-<li>M&amp;SOM Best Paper Award, INFORMS, 2019</li>
-<li>TSL Best Paper Award, INFORMS, 2019</li>
+<li>M&amp;SOM Best Paper Award, 2019</li>
+<li>INFORMS TSL Best Paper Award, 2019</li>
 </ul></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
@@ -472,13 +476,11 @@
 <h2 id="working-papers">Working Papers</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3307337" target="_blank">Robust Vehicle Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang).</p></li>
-
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). [Previous title: &ldquo;Data-Driven Order Assignment for Last Mile Delivery&rdquo;]</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>.&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
 
-<li><p>&ldquo;<a href="http://ssrn.com/abstract=2915470" target="_blank">Spatial Pricing and Product Allocation in Online Retailing</a>.&rdquo; (with T. Tony Ke).</p></li>
+<li><p>&ldquo;<a href="http://ssrn.com/abstract=2915470" target="_blank">Spatial Pricing and Product Allocation in Online Retailing</a>.&ldquo;.</p></li>
 </ul>
 
 <h2 id="book-chapter">Book Chapter</h2>
