--- a/index.html
+++ b/index.html
@@ -455,6 +455,8 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ul>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science</em>. Forthcoming.</p></li>
+
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em>. Forthcoming.</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3223735" target="_blank">Charging an Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. Forthcoming.</p></li>
@@ -476,11 +478,9 @@
 <h2 id="working-papers">Working Papers</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). [Previous title: &ldquo;Data-Driven Order Assignment for Last Mile Delivery&rdquo;]</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">Managing Electric Vehicle Charging: An Exponential Cone Programming Approach</a>.&rdquo; (with Li Chen and Yangfang Zhou).</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>.&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
-
-<li><p>&ldquo;<a href="http://ssrn.com/abstract=2915470" target="_blank">Spatial Pricing and Product Allocation in Online Retailing</a>.&ldquo;.</p></li>
 </ul>
 
 <h2 id="book-chapter">Book Chapter</h2>
@@ -529,17 +529,17 @@
 <li>DSC3214 Introduction to Optimization
 
 <ul>
-<li><sup>2018</sup>&frasl;<sub>2019</sub> S1</li>
+<li>Fall 2018</li>
 </ul></li>
 <li>DBA3803/DSC3216 Predictive Analytics in Business
 
 <ul>
-<li><sup>2017</sup>&frasl;<sub>2018</sub> S1&amp;2, <sup>2018</sup>&frasl;<sub>2019</sub> S1&amp;2, <sup>2019</sup>&frasl;<sub>2020</sub> S1</li>
+<li>Fall 2017, Spring 2018, Fall 2018, Spring 2019, Fall 2019</li>
 </ul></li>
 <li>DSC3216 Forecasting for Managerial Decisions
 
 <ul>
-<li><sup>2015</sup>&frasl;<sub>2016</sub> S2, <sup>2016</sup>&frasl;<sub>2017</sub> S2</li>
+<li>Spring 2016, Spring 2017</li>
 </ul></li>
 </ol>
 
@@ -549,7 +549,7 @@
 <li>BDC6114 Logistics and Supply Chain
 
 <ul>
-<li><sup>2016</sup>&frasl;<sub>2017</sub> S2, <sup>2017</sup>&frasl;<sub>2018</sub> S2, <sup>2019</sup>&frasl;<sub>2020</sub> S1</li>
+<li>Spring 2017, Spring 2018, Fall 2019</li>
 </ul></li>
 </ol>
 
