--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
 <ul>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3179994" target="_blank">On-Time Last Mile Delivery: Order Assignment with Travel Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science</em>. Forthcoming.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em> 29(4), 955-972, 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em> 29(4), 955-972. 2020.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em>. 2020.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management</em> 29(1), 9-23. 2020.</p></li>
 
