--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@
 <h2 id="working-papers">Working Papers</h2>
 
 <ul>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3579830" target="_blank">Spatial-Data-Driven Drone Placement for Emergency Response</a>.&rdquo; (with Irfan Soudagar).</p></li>
+
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">Managing Electric Vehicle Charging: An Exponential Cone Programming Approach</a>.&rdquo; (with Li Chen and Yangfang Zhou).</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3090177" target="_blank">On the Performance of Tailored Base-Surge Policies: Theory and Application at Walmart.com</a>.&rdquo; (with Linwei Xin, Jagtej Bewli, John Bowman, Huijun Feng, and Z. Tony Qin).</p></li>
