--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an assistant professor in Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. Prior to joining NUS, I was a data scientist at @WalmartLabs, Walmart eCommerce in California. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized by the M&amp;SOM Journal Best Paper Award and Transportation Science &amp; Logistics (TSL) Best Paper Award from INFORMS.</p>
+<p>I am an assistant professor in Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. Prior to joining NUS, I was a data scientist at @WalmartLabs, Walmart eCommerce in California. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award and Transportation Science &amp; Logistics (TSL) Best Paper Award from INFORMS.</p>
 
 <p><a href="https://bizfaculty.nus.edu.sg/faculty-details/?profId=470" target="_blank">My official NUS Webpage</a></p>
 
