--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award and Transportation Science &amp; Logistics (TSL) Best Paper Award from INFORMS.</p>
+<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award, Transportation Science &amp; Logistics (TSL) Best Paper Award, and ENRE Best Publication Award in Energy from INFORMS.</p>
 
 
     <div class="row">
@@ -453,7 +453,7 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management</em> Forthcoming. 2022.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management</em> 31(10), 3771-3787. 2022.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2020.3741" target="_blank">On-Time Last-Mile Delivery: Order Assignment with Travel-Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science</em>. 67(7), 4095-4119. 2021.</p></li>
 
@@ -463,7 +463,7 @@
 <li>2022 ENRE Best Publication Award in Energy, INFORMS</li>
 </ul></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL)</em>. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL)</em>. 67(8), 670-684. 2020.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em> 29(4), 955-972. 2020.</p></li>
 
@@ -484,15 +484,15 @@
 <h2 id="working-paper">Working Paper</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). Major Revision at <em>Operations Research</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). Under Revision at <em>Operations Research</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Major Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Under Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Reject and Resubmit at <em>Management Science</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision at <em>Management Science</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). </p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Engagement</a>.&rdquo; (with Tu Ni).</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Review</p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3579830" target="_blank">Spatial-Data-Driven Facility Location Planning for Emergency Response</a>.&rdquo; (with Irfan Soudagar).</p></li>
 
