--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         <div class="card">
           <div class="card-body">
             <div class="float-right text-muted exp-meta">
-              <div>2021 – Current</div>
+              <div>2021 – 2022</div>
               <div>2015 – 2021</div>
               <div class="text-right">Singapore</div>
               
