--- a/index.html
+++ b/index.html
@@ -559,16 +559,27 @@
 <h2 id="msba">MSBA</h2>
 
 <ol>
-<li>Optimization I/II
 
+<li>Supply Chain Analytics
+<ul>
+<li>Spring 2023</li>
+</ul></li>
+
+<li>Machine Learning I/II
+<ul>
+<li>Spring 2023</li>
+</ul></li>
+  
+<li>Optimization I/II
 <ul>
 <li>Spring 2022</li>
 </ul></li>
+  
 <li>Foundation in Business Analytics
-
 <ul>
 <li>Fall 2020, Fall 2021</li>
 </ul></li>
+  
 </ol>
 
 <h2 id="phd">PhD</h2>
