--- a/index.html
+++ b/index.html
@@ -453,6 +453,8 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ul>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Accepted at <em>Manufacturing &amp; Service Operations Management</em></p></li>
+
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management</em> 31(10), 3771-3787. 2022.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2020.3741" target="_blank">On-Time Last-Mile Delivery: Order Assignment with Travel-Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science</em>. 67(7), 4095-4119. 2021.</p></li>
@@ -486,13 +488,11 @@
 <ul>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). Under Revision at <em>Operations Research</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Under Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
-
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision at <em>Management Science</em></p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Review</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision at <em>Production and Operations Management</em></p></li>
 
 </ul>
 
