--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
 </ul>
 
-<h2 id="working-paper">Working Paper</h2>
+<h2 id="working-paper">Working Papers</h2>
 
 <ul>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Accepted at <em>Manufacturing &amp; Service Operations Management</em></p></li>  
