--- a/index.html
+++ b/index.html
@@ -454,46 +454,49 @@
 
 <ul>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management</em> 31(10), 3771-3787. 2022.</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> Accepted.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2020.3741" target="_blank">On-Time Last-Mile Delivery: Order Assignment with Travel-Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science</em>. 67(7), 4095-4119. 2021.</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> Accepted.</p></li>   
+ 
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management.</em> 31(10), 3771-3787. 2022.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management</em> 23(2), 471-487. 2021.</p>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2020.3741" target="_blank">On-Time Last-Mile Delivery: Order Assignment with Travel-Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science.</em> 67(7), 4095-4119. 2021.</p></li>
+
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management.</em> 23(2), 471-487. 2021.</p>
  
 <ul>
 <li>2022 ENRE Best Publication Award in Energy, INFORMS</li>
 </ul></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL)</em>. 67(8), 670-684. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL).</em> 67(8), 670-684. 2020.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management</em> 29(4), 955-972. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13143" target="_blank">Robust Vehicle Pre‐Allocation with Uncertain Covariates</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). <em>Production and Operations Management.</em> 29(4), 955-972. 2020.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management</em> 29(1), 9-23. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13065" target="_blank">Product Sourcing and Distribution Strategies under Supply Disruption and Recall Risks</a>.&rdquo; (with Ying Rong and Z. Max Shen). <em>Production and Operations Management.</em> 29(1), 9-23. 2020.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management</em> 22(2), 241-256. 2020.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 22(2), 241-256. 2020.</p></li>
 
-<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management</em> 19(2), 309–327. 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
+<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management.</em> 19(2), 309–327. 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
 
 <ul>
 <li>2019 M&amp;SOM Journal Best Paper Award, INFORMS</li>
 <li>2019 Transportation Science &amp; Logistics (TSL) Best Paper Award, INFORMS</li>
 </ul></li>
 
-<li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid</em> 4.4 (2013) 2296-2308.</p></li>
+<li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid.</em> 4.4 (2013) 2296-2308.</p></li>
 </ul>
 
 <h2 id="working-paper">Working Papers</h2>
 
 <ul>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). Accepted at <em>Manufacturing &amp; Service Operations Management</em></p></li>  
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). Under Revision at <em>Operations Research</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency? An Analysis using Prize-collecting Traveling Salesman Model</a>.&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Under Revision at <em>Management Science.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision at <em>Management Science</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision at <em>Management Science.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision at <em>Manufacturing &amp; Service Operations Management</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision at <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision at <em>Production and Operations Management</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision at <em>Production and Operations Management.</em></p></li>
 
 </ul>
 
@@ -537,60 +540,22 @@
   <div class="col-12 col-lg-8">
     
 
-<h2 id="undergraduate">Undergraduate</h2>
+<h2 id="gwu">GWU</h2>
 
 <ol>
-<li>Introduction to Optimization
-
-<ul>
-<li>Fall 2018</li>
-</ul></li>
-<li>Predictive Analytics in Business
-
-<ul>
-<li>Fall 2017, Spring 2018, Fall 2018, Spring 2019, Fall 2019</li>
-</ul></li>
-<li>Forecasting for Managerial Decisions
-
-<ul>
-<li>Spring 2016, Spring 2017</li>
-</ul></li>
+<li>Supply Chain Analytics (MSBA)</li>
+<li>Machine Learning I/II (MSBA)</li>
+<li>Optimization I/II (MSBA)</li>
 </ol>
-
-<h2 id="msba">MSBA</h2>
-
-<ol>
-
-<li>Supply Chain Analytics
-<ul>
-<li>Spring 2023</li>
-</ul></li>
-
-<li>Machine Learning I/II
-<ul>
-<li>Spring 2023</li>
-</ul></li>
-  
-<li>Optimization I/II
-<ul>
-<li>Spring 2022</li>
-</ul></li>
-  
-<li>Foundation in Business Analytics
-<ul>
-<li>Fall 2020, Fall 2021</li>
-</ul></li>
-  
-</ol>
-
-<h2 id="phd">PhD</h2>
+    
+<h2 id="nus">NUS</h2>
 
 <ol>
-<li>Logistics and Supply Chain
-
-<ul>
-<li>Spring 2017, Spring 2018, Fall 2019</li>
-</ul></li>
+<li>Introduction to Optimization (BBA)</li>
+<li>Predictive Analytics in Business (BBA)</li>
+<li>Forecasting for Managerial Decisions (BBA)</li>
+<li>Foundation in Business Analytics (MSBA)</li>
+<li>Logistics and Supply Chain (PhD)</li>
 </ol>
 
   </div>
