--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 <h2 id="gwu">GWU</h2>
 
 <ol>
-<li>Supply Chain Analytics (MSBA)</li>
+<li>Supply Chain Analytics (BBA/MSBA)</li>
 <li>Machine Learning I/II (MSBA)</li>
 <li>Optimization I/II (MSBA)</li>
 </ol>
