--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
 
 <ul>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3548028" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> Accepted.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> Accepted.</p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3724201" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> Accepted.</p></li>   
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> Accepted.</p></li>   
  
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management.</em> 31(10), 3771-3787. 2022.</p></li>
 
