--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations (DAO) at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award, Transportation Science &amp; Logistics (TSL) Best Paper Award, and ENRE Best Publication Award in Energy from INFORMS.</p>
+<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using data-driven approaches to address problems in smart city operations (e.g., vehicle sharing, last-mile delivery) and supply chain management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award, Transportation Science &amp; Logistics (TSL) Best Paper Award, and ENRE Best Publication Award in Energy from INFORMS.</p>
 
 
     <div class="row">
@@ -497,6 +497,8 @@
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision in <em>Production and Operations Management.</em></p></li>
+
+<li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). </p></li>
 
 </ul>
 
