--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision in <em>Production and Operations Management.</em></p>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision in <em>Production and Operations Management.</em></p></li>
+
+<li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). </p>
 <ul>
 <li>In SIGKDD 2023</li>
 </ul>
 </li>
-
-<li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). </p></li>
 
 </ul>
 
