--- a/index.html
+++ b/index.html
@@ -507,9 +507,11 @@
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). </p>
 <ul>
-<li>In SIGKDD 2023</li>
+<li>Preliminary version: In SIGKDD 2023</li>
 </ul>
 </li>
+
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Review</p></li>
 
 </ul>
 
