--- a/index.html
+++ b/index.html
@@ -505,10 +505,11 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Under Revision in <em>Production and Operations Management.</em></p></li>
 
-<li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). </p>
+<li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
 <li>Preliminary version: In SIGKDD 2023</li>
 </ul>
+</p>
 </li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Review</p></li>
