--- a/index.html
+++ b/index.html
@@ -469,11 +469,10 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2020.3741" target="_blank">On-Time Last-Mile Delivery: Order Assignment with Travel-Time Predictors</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Management Science.</em> 67(7), 4095-4119. 2021.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management.</em> 23(2), 471-487. 2021.</p>
- 
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management.</em> 23(2), 471-487. 2021.
 <ul>
 <li>2022 ENRE Best Publication Award in Energy, INFORMS</li>
-</ul></li>
+</ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL).</em> 67(8), 670-684. 2020.</p></li>
 
@@ -483,12 +482,11 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2018.0734" target="_blank">Robust Repositioning for Vehicle Sharing</a>.&rdquo; (with Zhenyu Hu and Meilin Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 22(2), 241-256. 2020.</p></li>
 
-<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management.</em> 19(2), 309–327. 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]</p>
-
+<li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management.</em> 19(2), 309–327. 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]
 <ul>
 <li>2019 M&amp;SOM Journal Best Paper Award, INFORMS</li>
 <li>2019 Transportation Science &amp; Logistics (TSL) Best Paper Award, INFORMS</li>
-</ul></li>
+</ul></p></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid.</em> 4.4 (2013) 2296-2308.</p></li>
 </ul>
@@ -508,8 +506,7 @@
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
 <li>Preliminary version: In SIGKDD 2023</li>
-</ul>
-</p>
+</ul></p>
 </li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Review</p></li>
