--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
-<li>Preliminary version: In SIGKDD 2023</li>
+<li>Preliminary version: <a href="https://doi.org/10.1145/3580305.3599474" target="_blank">KDD '23: Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</a>.</li>
 </ul></p>
 </li>
 
